--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -76,52 +76,33 @@
                 <span class="fr">16R</span>
             </div>
         </div>
-        <div class="hot_pro">        	
+        
+        <div class="hot_pro">  
         	<div id="featureContainer">
                 <div id="feature">
                     <div id="block">
                         <div id="botton-scroll">
                             <ul class="featureUL">
+                                {foreach $aa as $k=>$vo}
                                 <li class="featureBox">
                                     <div class="box">
-                                    	<div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
+                               	<div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
                                         <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot1.jpg" width="160" height="136" /></a>
+                                        	<a href="/index/goods/goods_details/id/{$vo.goods_id}"> <img src="{$vo.goods_img}" width="160" height="136" /> </a>
                                         </div>                                        
                                         <div class="name">
-                                        	<a href="#">
-                                            <h2>德国进口</h2>
-                                            德亚全脂纯牛奶200ml*48盒
+                                            <a href="/index/goods/goods_details/id/{$vo.goods_id}">
+                                            <h2>{$vo.goods_name}</h2>
                                             </a>
                                         </div>
                                         <div class="price">
-                                            <font>￥<span>189</span></font> &nbsp; 26R
+                                            <font>￥<span>{$vo.goods_price}</span></font>
                                         </div>
+
+                                        
                                     </div>
                                 </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot2.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>iphone 6S</h2>
-                                            Apple/苹果 iPhone 6s Plus公开版
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>5288</span></font> &nbsp; 25R
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot3.jpg" width="160" height="136" /></a>
-                                        </div>                                        
+                                {/foreach}
                                         <div class="name">
                                         	<a href="#">
                                             <h2>倩碧特惠组合套装</h2>
@@ -132,24 +113,8 @@
                                             <font>￥<span>368</span></font> &nbsp; 18R
                                         </div>
                                     </div>
-                                </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot4.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>品利特级橄榄油</h2>
-                                            750ml*4瓶装组合 西班牙原装进口
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>280</span></font> &nbsp; 30R
-                                        </div>
-                                    </div>
-                                </li>
+                                </li>-->
+
                             </ul>
                         </div>
                     </div>
