--- a/application/index/view/goods/product.html
+++ b/application/index/view/goods/product.html
@@ -1,4 +1,37 @@
-{layout name="shop_productlayout" /}
+{layout name="shop_productlayout" }
+<script type="text/javascript" src="/front/js/jquery-1.8.2.min.js"></script>
+<script>
+    function ShowDiv_1(show_div,bg_div,id){
+            var num = $('#num').val();//获取要加如购物车商品的数量
+            $.get("/index/goods_car/rece_good",{id:id,num:num},function(data){
+              
+                    if(data==1){
+                        document.getElementById(show_div).style.display='block';
+                        document.getElementById(bg_div).style.display='block' ;
+                        var bgdiv = document.getElementById(bg_div);
+                        bgdiv.style.width = document.body.scrollWidth;
+                        $("#"+bg_div).height($(document).height());
+                        
+                    }else{
+                        alert('加入购物车失败');
+                    }
+                });
+    };
+    
+//     function ShowDiv_1(id){
+//
+//            $.get("/index/goods_car/rece_good",{id:id},function(data){
+//  
+//            if(data==1){
+//                  alert(加入成功);//msg = "加入成功";
+//              }else{
+//                   msg ="名没有,请注册";
+//              }
+//          });
+//
+//     }
+//    
+</script>
 <div class="i_bg">
 	<div class="postion">
     	<span class="fl">全部 > 美妆个护 > 香水 > 迪奥 > 迪奥真我香水</span>
@@ -6,34 +39,31 @@
     <div class="content">
     	                    
         <div id="tsShopContainer">
-            <div id="tsImgS"><a href="/front/images/p_big.jpg" title="Images" class="MagicZoom" id="MagicZoom"><img src="/front/images/p_big.jpg" width="390" height="390" /></a></div>
+            <div id="tsImgS"><a href="{$xq.goods_img[0]}" title="Images" class="MagicZoom" id="MagicZoom"><img src="{$xq.goods_img[0]}" width="390" height="390" /></a></div>
             <div id="tsPicContainer">
                 <div id="tsImgSArrL" onclick="tsScrollArrLeft()"></div>
                 <div id="tsImgSCon">
                     <ul>
-                        <li onclick="showPic(0)" rel="MagicZoom" class="tsSelectImg"><img src="/front/images/ps1.jpg" tsImgS="/front/images/ps1.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(1)" rel="MagicZoom"><img src="/front/images/ps2.jpg" tsImgS="/front/images/ps2.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(2)" rel="MagicZoom"><img src="/front/images/ps3.jpg" tsImgS="/front/images/ps3.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(3)" rel="MagicZoom"><img src="/front/images/ps4.jpg" tsImgS="/front/images/ps4.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(4)" rel="MagicZoom"><img src="/front/images/ps1.jpg" tsImgS="/front/images/ps1.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(5)" rel="MagicZoom"><img src="/front/images/ps2.jpg" tsImgS="/front/images/ps2.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(6)" rel="MagicZoom"><img src="/front/images/ps3.jpg" tsImgS="/front/images/ps3.jpg" width="79" height="79" /></li>
-                        <li onclick="showPic(7)" rel="MagicZoom"><img src="/front/images/ps4.jpg" tsImgS="/front/images/ps4.jpg" width="79" height="79" /></li>
+                        {foreach $xq['goods_img'] as $v}
+                        <li onclick="showPic(0)" rel="MagicZoom" class="tsSelectImg"><img src="{$v}" tsImgS="{$v}" width="79" height="79" /></li>
+
+                        {/foreach}
                     </ul>
                 </div>
                 <div id="tsImgSArrR" onclick="tsScrollArrRight()"></div>
             </div>
             <img class="MagicZoomLoading" width="16" height="16" src="/front/images/loading.gif" alt="Loading..." />				
         </div>
+
         
         <div class="pro_des">
         	<div class="des_name">
-            	<p>Dior/迪奥 真我香水EDP 克丽丝汀迪奥 全新 30ml</p>
-                “开业巨惠，北京专柜直供”，不光低价，“真”才靠谱！
+            	<p>{$xq.goods_name}</p>
+
             </div>
             <div class="des_price">
-            	本店价格：<b>￥589</b><br />
-                消费积分：<span>28R</span>
+            	本店价格：<b>{$xq.goods_price}</b><br />
+
             </div>
             <div class="des_choice">
             	<span class="fl">型号选择：</span>
@@ -55,29 +85,28 @@
             	<div class="d_sh">
                 	分享
                     <div class="d_sh_bg">
-                    	<a href="#"><img src="/front/images/sh_1.gif" /></a>
-                        <a href="#"><img src="/front/images/sh_2.gif" /></a>
-                        <a href="#"><img src="/front/images/sh_3.gif" /></a>
-                        <a href="#"><img src="/front/images/sh_4.gif" /></a>
-                        <a href="#"><img src="/front/images/sh_5.gif" /></a>
+                        {foreach $xq['goods_img'] as $v}
+                        <a href="#"><img src="{$v}" /></a>
+                        {/foreach}
                     </div>
                 </div>
                 <div class="d_care"><a onclick="ShowDiv('MyDiv','fade')">关注商品</a></div>
             </div>
             <div class="des_join">
             	<div class="j_nums">
-                	<input type="text" value="1" name="" class="n_ipt" />
-                    <input type="button" value="" onclick="addUpdate(jq(this));" class="n_btn_1" />
-                    <input type="button" value="" onclick="jianUpdate(jq(this));" class="n_btn_2" />   
+                	<input type="text" value="1" id="num" name="" class="n_ipt" />
+                    <input type="button" value=""  onclick="addUpdate(jq(this));" class="n_btn_1" />
+                    <input type="button" value=""   onclick="jianUpdate(jq(this));" class="n_btn_2" />   
                 </div>
-                <span class="fl"><a onclick="ShowDiv_1('MyDiv1','fade1')"><img src="/front/images/j_car.png" /></a></span>
+<!--                <span class="fl"><a onclick="ShowDiv_1({$xq.goods_id})" href='javascript:void(0)'><img src="/front/images/j_car.png" /></a></span>-->
+                <span class="fl"><a onclick="ShowDiv_1('MyDiv1','fade1','{$xq.goods_id}')"><img src="/front/images/j_car.png" /></a></span>
             </div>            
         </div>    
-        
-        <div class="s_brand">
+
+<!--        <div class="s_brand">
         	<div class="s_brand_img"><img src="/front/images/sbrand.jpg" width="188" height="132" /></div>
             <div class="s_brand_c"><a href="#">进入品牌专区</a></div>
-        </div>    
+        </div>    -->
         
         
     </div>
@@ -174,24 +203,8 @@
                 <div class="des_con" id="p_attribute">
                 	
                 	<table border="0" align="center" style="width:100%; font-family:'宋体'; margin:10px auto;" cellspacing="0" cellpadding="0">
-                      <tr>
-                        <td>商品名称：迪奥香水</td>
-                        <td>商品编号：1546211</td>
-                        <td>品牌： 迪奥（Dior）</td>
-                        <td>上架时间：2015-09-06 09:19:09 </td>
-                      </tr>
-                      <tr>
-                        <td>商品毛重：160.00g</td>
-                        <td>商品产地：法国</td>
-                        <td>香调：果香调香型：淡香水/香露EDT</td>
-                        <td>&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td>容量：1ml-15ml </td>
-                        <td>类型：女士香水，Q版香水，组合套装</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                      </tr>
+                            <tr><td>{$xq.goods_property}</td></tr>
+
                     </table>                                               
                                             
                         
@@ -203,26 +216,20 @@
                 <div class="des_con">
                 	<table border="0" align="center" style="width:745px; font-size:14px; font-family:'宋体';" cellspacing="0" cellpadding="0">
                       <tr>
-                        <td width="265"><img src="/front/images/de1.jpg" width="206" height="412" /></td>
+                        <td width="265"><img src="{$xq.goods_img[0]}" width="206" height="412" /></td>
                         <td>
-                        	<b>迪奥真我香水(Q版)</b><br />
-                            【商品规格】：5ml<br />
-                            【商品质地】：液体<br />
-                            【商品日期】：与专柜同步更新<br />
-                            【商品产地】：法国<br />
-                            【商品包装】：无外盒 无塑封<br />
-                            【商品香调】：花束花香调<br />
-                            【适用人群】：适合女性（都市白领，性感，有女人味的成熟女性）<br />
+                        	<b>{$xq.goods_name}</b>
+                                   {$xq.goods_xq}
+
                         </td>
                       </tr>
                     </table>
                     
                     <p align="center">
-                    <img src="/front/images/de2.jpg" width="746" height="425" /><br /><br />
-                    <img src="/front/images/de3.jpg" width="750" height="417" /><br /><br />
-                    <img src="/front/images/de4.jpg" width="750" height="409" /><br /><br />
-                    <img src="/front/images/de5.jpg" width="750" height="409" />
-					</p>
+                    {foreach $xq['goods_img'] as $v}
+                    <img src="{$v}" width="746" height="425" /><br /><br />
+	            {/foreach}		
+                    </p>
                     
                 </div>
           	</div>  
@@ -252,7 +259,7 @@
                         </table>
                     </td>
                     <td width="185" class="jud_bg">
-                    	购买过雅诗兰黛第六代特润精华露50ml的顾客，在收到商品才可以对该商品发表评论
+                    	购买过{$xq.goods_name}在收到商品才可以对该商品发表评论
                     </td>
                     <td class="jud_bg">您可对已购买商品进行评价<br /><a href="#"><img src="/front/images/btn_jud.gif" /></a></td>
                   </tr>
@@ -261,23 +268,21 @@
                 
                 				
                 <table border="0" class="jud_list" style="width:100%; margin-top:30px;" cellspacing="0" cellpadding="0">
+                   {foreach $pl as $k=>$vo} 
                   <tr valign="top">
-                    <td width="160"><img src="/front/images/peo1.jpg" width="20" height="20" align="absmiddle" />&nbsp;向死而生</td>
-                    <td width="180">
-                    	颜色分类：<font color="#999999">粉色</font> <br />
-                        型号：<font color="#999999">50ml</font>
-                    </td>
+                    
+                    <td width="160"><img src="{$vo.user_img}" width="20" height="20" align="absmiddle" />&nbsp;{$vo.user_name}</td>
+
                     <td>
-                    	产品很好，香味很喜欢，必须给赞。 <br />
-                        <font color="#999999">2015-09-24</font>
+                    	{$vo.comment_con} <br />
+                        <font color="#999999">{$vo.comment_time}</font>
                     </td>
+                    
                   </tr>
-                  <tr valign="top">
+                  {/foreach}
+<!--                  <tr valign="top">
                     <td width="160"><img src="/front/images/peo2.jpg" width="20" height="20" align="absmiddle" />&nbsp;就是这么想的</td>
-                    <td width="180">
-                    	颜色分类：<font color="#999999">粉色</font> <br />
-                        型号：<font color="#999999">50ml</font>
-                    </td>
+
                     <td>
                     	送朋友，她很喜欢，大爱。 <br />
                         <font color="#999999">2015-09-24</font>
@@ -285,10 +290,7 @@
                   </tr>
                   <tr valign="top">
                     <td width="160"><img src="/front/images/peo3.jpg" width="20" height="20" align="absmiddle" />&nbsp;墨镜墨镜</td>
-                    <td width="180">
-                    	颜色分类：<font color="#999999">粉色</font> <br />
-                        型号：<font color="#999999">50ml</font>
-                    </td>
+
                     <td>
                     	大家都说不错<br />
                         <font color="#999999">2015-09-24</font>
@@ -296,15 +298,12 @@
                   </tr>
                   <tr valign="top">
                     <td width="160"><img src="/front/images/peo4.jpg" width="20" height="20" align="absmiddle" />&nbsp;那*****洋 <br /><font color="#999999">（匿名用户）</font></td>
-                    <td width="180">
-                    	颜色分类：<font color="#999999">粉色</font> <br />
-                        型号：<font color="#999999">50ml</font>
-                    </td>
+
                     <td>
                     	下次还会来买，推荐。<br />
                         <font color="#999999">2015-09-24</font>
                     </td>
-                  </tr>
+                  </tr>-->
                 </table>
 
                 	
@@ -357,18 +356,18 @@
                 <span class="fr" style="margin-top:10px; cursor:pointer;" onclick="CloseDiv_1('MyDiv1','fade1')"><img src="/front/images/close.gif" /></span>
             </div>
             <div class="notice_c">
-           		
+<!--                <input type="hidden" value="" >	-->
                 <table border="0" align="center" style="margin-top:;" cellspacing="0" cellpadding="0">
                   <tr valign="top">
                     <td width="40"><img src="/front/images/suc.png" /></td>
                     <td>
                     	<span style="color:#3e3e3e; font-size:18px; font-weight:bold;">宝贝已成功添加到购物车</span><br />
-                    	购物车共有1种宝贝（3件） &nbsp; &nbsp; 合计：1120元
+                    	<!--购物车共有1种宝贝（3件） &nbsp; &nbsp; 合计：1120元-->
                     </td>
                   </tr>
                   <tr height="50" valign="bottom">
                   	<td>&nbsp;</td>
-                    <td><a href="#" class="b_sure">去购物车结算</a><a href="#" class="b_buy">继续购物</a></td>
+                    <td><a href="/index/goods_car/buycar" class="b_sure">去购物车结算</a><a href="http://www.yiyicheng.com/index/index/index" class="b_buy">继续购物</a></td>
                   </tr>
                 </table>
                     
