--- a/application/back/view/Index/index.html
+++ b/application/back/view/Index/index.html
@@ -1,5 +1,5 @@
 ﻿{layout name="tree_layout" /}
-							<li class="active">控制台</li>
+							
 						</ul><!-- .breadcrumb -->
 
 						<div class="nav-search" id="nav-search">
@@ -15,7 +15,7 @@
 					<div class="page-content">
 						<div class="page-header">
 							<h1>
-								控制台
+								首页
 								<small>
 									<i class="icon-double-angle-right"></i>
 									 查看
@@ -36,10 +36,10 @@
 
 									欢迎使用
 									<strong class="green">
-										Ace后台管理系统
-										<small>(v1.2)</small>
+										易易城后台管理系统
+										<small></small>
 									</strong>
-									,轻量级好用的后台管理系统模版.	
+									
 								</div>
 
 								<div class="row">
@@ -168,237 +168,27 @@
 										</div>
 									</div>
 
-									<div class="vspace-sm"></div>
-
-									<div class="col-sm-5">
-										<div class="widget-box">
-											<div class="widget-header widget-header-flat widget-header-small">
-												<h5>
-													<i class="icon-signal"></i>
-													访问来源
-												</h5>
-
-												<div class="widget-toolbar no-border">
-													<button class="btn btn-minier btn-primary dropdown-toggle" data-toggle="dropdown">
-														本周
-														<i class="icon-angle-down icon-on-right bigger-110"></i>
-													</button>
-
-													<ul class="dropdown-menu pull-right dropdown-125 dropdown-lighter dropdown-caret">
-														<li class="active">
-															<a href="#" class="blue">
-																<i class="icon-caret-right bigger-110">&nbsp;</i>
-																本周
-															</a>
-														</li>
-
-														<li>
-															<a href="#">
-																<i class="icon-caret-right bigger-110 invisible">&nbsp;</i>
-																上周
-															</a>
-														</li>
-
-														<li>
-															<a href="#">
-																<i class="icon-caret-right bigger-110 invisible">&nbsp;</i>
-																本月
-															</a>
-														</li>
-
-														<li>
-															<a href="#">
-																<i class="icon-caret-right bigger-110 invisible">&nbsp;</i>
-																上月
-															</a>
-														</li>
-													</ul>
-												</div>
-											</div>
-
-											<div class="widget-body">
-												<div class="widget-main">
-													<div id="piechart-placeholder"></div>
-
-													<div class="hr hr8 hr-double"></div>
-
-													<div class="clearfix">
-														<div class="grid3">
-															<span class="grey">
-																<i class="icon-facebook-sign icon-2x blue"></i>
-																&nbsp; likes
-															</span>
-															<h4 class="bigger pull-right">1,255</h4>
-														</div>
-
-														<div class="grid3">
-															<span class="grey">
-																<i class="icon-twitter-sign icon-2x purple"></i>
-																&nbsp; tweets
-															</span>
-															<h4 class="bigger pull-right">941</h4>
-														</div>
-
-														<div class="grid3">
-															<span class="grey">
-																<i class="icon-pinterest-sign icon-2x red"></i>
-																&nbsp; pins
-															</span>
-															<h4 class="bigger pull-right">1,050</h4>
-														</div>
-													</div>
-												</div><!-- /widget-main -->
-											</div><!-- /widget-body -->
-										</div><!-- /widget-box -->
-									</div><!-- /span -->
-								</div><!-- /row -->
-
-								<div class="hr hr32 hr-dotted"></div>
-
+									
+									
+							
 								<div class="row">
 									<div class="col-sm-5">
 										<div class="widget-box transparent">
-											<div class="widget-header widget-header-flat">
-												<h4 class="lighter">
-													<i class="icon-star orange"></i>
-													热门域名
-												</h4>
-
-												<div class="widget-toolbar">
-													<a href="#" data-action="collapse">
-														<i class="icon-chevron-up"></i>
-													</a>
-												</div>
-											</div>
+											
 
 											<div class="widget-body">
 												<div class="widget-main no-padding">
 													<table class="table table-bordered table-striped">
-														<thead class="thin-border-bottom">
-															<tr>
-																<th>
-																	<i class="icon-caret-right blue"></i>
-																	名称
-																</th>
+														
 
-																<th>
-																	<i class="icon-caret-right blue"></i>
-																	价格
-																</th>
-
-																<th class="hidden-480">
-																	<i class="icon-caret-right blue"></i>
-																	状态
-																</th>
-															</tr>
-														</thead>
-
-														<tbody>
-															<tr>
-																<td>internet.com</td>
-
-																<td>
-																	<small>
-																		<s class="red">$29.99</s>
-																	</small>
-																	<b class="green">$19.99</b>
-																</td>
-
-																<td class="hidden-480">
-																	<span class="label label-info arrowed-right arrowed-in">销售中</span>
-																</td>
-															</tr>
-
-															<tr>
-																<td>online.com</td>
-
-																<td>
-																	<small>
-																		<s class="red"></s>
-																	</small>
-																	<b class="green">$16.45</b>
-																</td>
-
-																<td class="hidden-480">
-																	<span class="label label-success arrowed-in arrowed-in-right">可用</span>
-																</td>
-															</tr>
-
-															<tr>
-																<td>newnet.com</td>
-
-																<td>
-																	<small>
-																		<s class="red"></s>
-																	</small>
-																	<b class="green">$15.00</b>
-																</td>
-
-																<td class="hidden-480">
-																	<span class="label label-danger arrowed">待定</span>
-																</td>
-															</tr>
-
-															<tr>
-																<td>web.com</td>
-
-																<td>
-																	<small>
-																		<s class="red">$24.99</s>
-																	</small>
-																	<b class="green">$19.95</b>
-																</td>
-
-																<td class="hidden-480">
-																	<span class="label arrowed">
-																		<s>无货</s>
-																	</span>
-																</td>
-															</tr>
-
-															<tr>
-																<td>domain.com</td>
-
-																<td>
-																	<small>
-																		<s class="red"></s>
-																	</small>
-																	<b class="green">$12.00</b>
-																</td>
-
-																<td class="hidden-480">
-																	<span class="label label-warning arrowed arrowed-right">售完</span>
-																</td>
-															</tr>
-														</tbody>
+														
 													</table>
 												</div><!-- /widget-main -->
 											</div><!-- /widget-body -->
 										</div><!-- /widget-box -->
 									</div>
 
-									<div class="col-sm-7">
-										<div class="widget-box transparent">
-											<div class="widget-header widget-header-flat">
-												<h4 class="lighter">
-													<i class="icon-signal"></i>
-													销售统计
-												</h4>
-
-												<div class="widget-toolbar">
-													<a href="#" data-action="collapse">
-														<i class="icon-chevron-up"></i>
-													</a>
-												</div>
-											</div>
-
-											<div class="widget-body">
-												<div class="widget-main padding-4">
-													<div id="sales-charts"></div>
-												</div><!-- /widget-main -->
-											</div><!-- /widget-body -->
-										</div><!-- /widget-box -->
-									</div>
+									
 								</div>
 
 								<div class="hr hr32 hr-dotted"></div>
@@ -406,135 +196,11 @@
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="widget-box transparent" id="recent-box">
-											<div class="widget-header">
-												<h4 class="lighter smaller">
-													<i class="icon-rss orange"></i>
-													最近
-												</h4>
-
-												<div class="widget-toolbar no-border">
-													<ul class="nav nav-tabs" id="recent-tab">
-														<li class="active">
-															<a data-toggle="tab" href="#task-tab">任务</a>
-														</li>
-
-														<li>
-															<a data-toggle="tab" href="#member-tab">会员</a>
-														</li>
-
-														<li>
-															<a data-toggle="tab" href="#comment-tab">评论</a>
-														</li>
-													</ul>
-												</div>
-											</div>
-
+											
 											<div class="widget-body">
 												<div class="widget-main padding-4">
 													<div class="tab-content padding-8 overflow-visible">
-														<div id="task-tab" class="tab-pane active">
-															<h4 class="smaller lighter green">
-																<i class="icon-list"></i>
-																可拖拽排序列表
-															</h4>
-
-															<ul id="tasks" class="item-list">
-																<li class="item-orange clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> 问答</span>
-																	</label>
-
-																	<div class="pull-right easy-pie-chart percentage" data-size="30" data-color="#ECCB71" data-percent="42">
-																		<span class="percent">42</span>%
-																	</div>
-																</li>
-
-																<li class="item-red clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> BUG修复</span>
-																	</label>
-
-																	<div class="pull-right action-buttons">
-																		<a href="#" class="blue">
-																			<i class="icon-pencil bigger-130"></i>
-																		</a>
-
-																		<span class="vbar"></span>
-
-																		<a href="#" class="red">
-																			<i class="icon-trash bigger-130"></i>
-																		</a>
-
-																		<span class="vbar"></span>
-
-																		<a href="#" class="green">
-																			<i class="icon-flag bigger-130"></i>
-																		</a>
-																	</div>
-																</li>
-
-																<li class="item-default clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl">添加新的特征</span>
-																	</label>
-
-																	<div class="inline pull-right position-relative dropdown-hover">
-																		<button class="btn btn-minier bigger btn-primary">
-																			<i class="icon-cog icon-only bigger-120"></i>
-																		</button>
-
-																		<ul class="dropdown-menu dropdown-only-icon dropdown-yellow dropdown-caret dropdown-close pull-right">
-																			<li>
-																				<a href="#" class="tooltip-success" data-rel="tooltip" title="Mark&nbsp;as&nbsp;done">
-																					<span class="green">
-																						<i class="icon-ok bigger-110"></i>
-																					</span>
-																				</a>
-																			</li>
-
-																			<li>
-																				<a href="#" class="tooltip-error" data-rel="tooltip" title="Delete">
-																					<span class="red">
-																						<i class="icon-trash bigger-110"></i>
-																					</span>
-																				</a>
-																			</li>
-																		</ul>
-																	</div>
-																</li>
-
-																<li class="item-blue clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> 更新模版脚本</span>
-																	</label>
-																</li>
-
-																<li class="item-grey clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> 添加新皮肤</span>
-																	</label>
-																</li>
-
-																<li class="item-green clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> 升级服务端</span>
-																	</label>
-																</li>
-
-																<li class="item-pink clearfix">
-																	<label class="inline">
-																		<input type="checkbox" class="ace" />
-																		<span class="lbl"> 清理垃圾</span>
-																	</label>
-																</li>
-															</ul>
-														</div>
+														
 
 														<div id="member-tab" class="tab-pane">
 															<div class="clearfix">
@@ -997,157 +663,7 @@
 										</div><!-- /widget-box -->
 									</div><!-- /span -->
 
-									<div class="col-sm-6">
-										<div class="widget-box ">
-											<div class="widget-header">
-												<h4 class="lighter smaller">
-													<i class="icon-comment blue"></i>
-													会话
-												</h4>
-											</div>
-
-											<div class="widget-body">
-												<div class="widget-main no-padding">
-													<div class="dialogs">
-														<div class="itemdiv dialogdiv">
-															<div class="user">
-																<img alt="Alexa's Avatar" src="assets/avatars/avatar1.png" />
-															</div>
-
-															<div class="body">
-																<div class="time">
-																	<i class="icon-time"></i>
-																	<span class="green">4秒钟前</span>
-																</div>
-
-																<div class="name">
-																	<a href="#">Alexa</a>
-																</div>
-																<div class="text">大家好啊</div>
-
-																<div class="tools">
-																	<a href="#" class="btn btn-minier btn-info">
-																		<i class="icon-only icon-share-alt"></i>
-																	</a>
-																</div>
-															</div>
-														</div>
-
-														<div class="itemdiv dialogdiv">
-															<div class="user">
-																<img alt="John's Avatar" src="assets/avatars/avatar.png" />
-															</div>
-
-															<div class="body">
-																<div class="time">
-																	<i class="icon-time"></i>
-																	<span class="blue">38秒以前</span>
-																</div>
-
-																<div class="name">
-																	<a href="#">John</a>
-																</div>
-																<div class="text">框架很好用嘛</div>
-
-																<div class="tools">
-																	<a href="#" class="btn btn-minier btn-info">
-																		<i class="icon-only icon-share-alt"></i>
-																	</a>
-																</div>
-															</div>
-														</div>
-
-														<div class="itemdiv dialogdiv">
-															<div class="user">
-																<img alt="Bob's Avatar" src="assets/avatars/user.jpg" />
-															</div>
-
-															<div class="body">
-																<div class="time">
-																	<i class="icon-time"></i>
-																	<span class="orange">2分钟以前</span>
-																</div>
-
-																<div class="name">
-																	<a href="#">Bob</a>
-																	<span class="label label-info arrowed arrowed-in-right">admin</span>
-																</div>
-																<div class="text">欢迎大家使用ACE后台管理系统.</div>
-
-																<div class="tools">
-																	<a href="#" class="btn btn-minier btn-info">
-																		<i class="icon-only icon-share-alt"></i>
-																	</a>
-																</div>
-															</div>
-														</div>
-
-														<div class="itemdiv dialogdiv">
-															<div class="user">
-																<img alt="Jim's Avatar" src="assets/avatars/avatar4.png" />
-															</div>
-
-															<div class="body">
-																<div class="time">
-																	<i class="icon-time"></i>
-																	<span class="grey">3分钟以前</span>
-																</div>
-
-																<div class="name">
-																	<a href="#">Jim</a>
-																</div>
-																<div class="text">大家多提提BUG</div>
-
-																<div class="tools">
-																	<a href="#" class="btn btn-minier btn-info">
-																		<i class="icon-only icon-share-alt"></i>
-																	</a>
-																</div>
-															</div>
-														</div>
-
-														<div class="itemdiv dialogdiv">
-															<div class="user">
-																<img alt="Alexa's Avatar" src="assets/avatars/avatar1.png" />
-															</div>
-
-															<div class="body">
-																<div class="time">
-																	<i class="icon-time"></i>
-																	<span class="green">4分钟以前</span>
-																</div>
-
-																<div class="name">
-																	<a href="#">Alexa</a>
-																</div>
-																<div class="text">继续支持ACE后台系统</div>
-
-																<div class="tools">
-																	<a href="#" class="btn btn-minier btn-info">
-																		<i class="icon-only icon-share-alt"></i>
-																	</a>
-																</div>
-															</div>
-														</div>
-													</div>
-
-													<form>
-														<div class="form-actions">
-															<div class="input-group">
-																<input placeholder="Type your message here ..." type="text" class="form-control" name="message" />
-																<span class="input-group-btn">
-																	<button class="btn btn-sm btn-info no-radius" type="button">
-																		<i class="icon-share-alt"></i>
-																		发送
-																	</button>
-																</span>
-															</div>
-														</div>
-													</form>
-												</div><!-- /widget-main -->
-											</div><!-- /widget-body -->
-										</div><!-- /widget-box -->
-									</div><!-- /span -->
+									
 								</div><!-- /row -->
 
 								<!-- PAGE CONTENT ENDS -->
@@ -1355,7 +871,7 @@
 			
 			})
 		</script>
-	More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+	
 </body>
 </html>
 
