--- a/application/back/view/public/tree_layout_one_header.html
+++ b/application/back/view/public/tree_layout_one_header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>易易城</title>
+		<title>易易城后台管理</title>
 
 		<meta name="keywords" content="Bootstrap模版,Bootstrap模版下载,Bootstrap教程,Bootstrap中文" />
 		<meta name="description" content="站长素材提供Bootstrap模版,Bootstrap教程,Bootstrap中文翻译等相关Bootstrap插件下载" />
@@ -282,7 +282,7 @@
 							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
 								<img class="nav-user-photo" src="/back/assets/avatars/user.jpg" alt="Jason's Photo" />
 								<span class="user-info">
-									<small>后台管理员</small>
+									<small>管理员</small>
 									<p style="color: red">{$admin_name}</p>
 								</span>
 
@@ -291,25 +291,25 @@
 
 							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
 								<li>
-									<a href="#">
+									<a href="/back/Updadminpwd/upd_admin_pwd">
 										<i class="icon-cog"></i>
-										Settings
+										修改密码
 									</a>
 								</li>
 
 								<li>
 									<a href="#">
 										<i class="icon-user"></i>
-										Profile
+										个人中心
 									</a>
 								</li>
 
 								<li class="divider"></li>
 
 								<li>
-									<a href="#">
+									<a href="/back/Login/loginout">
 										<i class="icon-off"></i>
-										Logout
+										退出登录
 									</a>
 								</li>
 							</ul>
@@ -366,14 +366,14 @@
 
 					<ul class="nav nav-list">
 						<li class="active">
-							<a href="index.html">
+							<a href="/back/Index/index">
 								<i class="icon-dashboard"></i>
-								<span class="menu-text"> 控制台 </span>
+								<span class="menu-text"> 首页 </span>
 							</a>
 						</li>
 
 						<li>
-							<a href='/back/Login/upd_admin_pwd'>
+							<a href='/back/Updadminpwd/upd_admin_pwd'>
 								<i class="icon-text-width"></i>
 								<span class="menu-text"> 修改密码 </span>
 							</a>
@@ -496,16 +496,16 @@
 						<li>
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-edit"></i>
-								<span class="menu-text"> 表单 </span>
+								<span class="menu-text"> 商品操作 </span>
 
 								<b class="arrow icon-angle-down"></b>
 							</a>
 
 							<ul class="submenu">
 								<li>
-									<a href="form-elements.html">
+									<a href="/back/Goods/add_goods">
 										<i class="icon-double-angle-right"></i>
-										表单组件
+										添加商品
 									</a>
 								</li>
 
