--- a/application/index/view/Index/BuyCar_Two.html
+++ b/application/index/view/Index/BuyCar_Two.html
@@ -9,31 +9,49 @@
     <div class="content mar_20">
     	<div class="two_bg">
         	<div class="two_t">
-            	<span class="fr"><a href="/index/goods_car/buycar">修改</a></span>商品列表
+            	<span class="fr"><a href="#">修改</a></span>商品列表
             </div>
             <table border="0" class="car_tab" style="width:1110px;" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="car_th" width="550">商品名称</td>
                 <td class="car_th" width="140">属性</td>
                 <td class="car_th" width="150">购买数量</td>
-                <td class="car_th" width="130">单价</td>
                 <td class="car_th" width="130">小计</td>
+                <td class="car_th" width="140">返还积分</td>
               </tr>
-             {foreach $key as $k=>$v}
-              <tr class="car_tr">
+              <tr>
                 <td>
-                    <div class="c_s_img"><img src="{$v.goods_img}" width="73" height="73" /></div>
-                    {$v.goods_name}
+                    <div class="c_s_img"><img src="/front/images/c_1.jpg" width="73" height="73" /></div>
+                    Rio 锐澳 水蜜桃味白兰地鸡尾酒（预调酒） 275ml
                 </td>
                 <td align="center">颜色：灰色</td>
-                <td align="center">{$v.s}</td>
-                <td align="center">{$v.goods_price}</td>
-                <td align="center" style="color:#ff4e00;">{$v.s*$v.goods_price}</td>
+                <td align="center">1</td>
+                <td align="center" style="color:#ff4e00;">￥620.00</td>
+                <td align="center">26R</td>
               </tr>
-             {/foreach}
+              <tr class="car_tr">
+                <td>
+                    <div class="c_s_img"><img src="/front/images/c_2.jpg" width="73" height="73" /></div>
+                    Rio 锐澳 水蜜桃味白兰地鸡尾酒（预调酒） 275ml
+                </td>
+                <td align="center">颜色：灰色</td>
+                <td align="center">1</td>
+                <td align="center" style="color:#ff4e00;">￥620.00</td>
+                <td align="center">26R</td>
+              </tr>
+              <tr>
+                <td>
+                    <div class="c_s_img"><img src="/front/images/c_3.jpg" width="73" height="73" /></div>
+                    Rio 锐澳 水蜜桃味白兰地鸡尾酒（预调酒） 275ml
+                </td>
+                <td align="center">颜色：灰色</td>
+                <td align="center">1</td>
+                <td align="center" style="color:#ff4e00;">￥620.00</td>
+                <td align="center">26R</td>
+              </tr>
               <tr>
                 <td colspan="5" align="right" style="font-family:'Microsoft YaHei';">
-                    商品总价：{$ddzj}
+                    商品总价：￥1899.00 ； 返还积分 56R  
                 </td>
               </tr>
             </table>
@@ -60,7 +78,12 @@
                 <td class="p_td">手机</td>
                 <td>18600002222</td>
               </tr>
-
+              <tr>
+                <td class="p_td">标志建筑</td>
+                <td></td>
+                <td class="p_td">最佳送货时间</td>
+                <td></td>
+              </tr>
             </table>
 
             
@@ -117,13 +140,72 @@
                 <li>支付宝<div class="ch_img"></div></li>
             </ul>
             
-
+            <div class="two_t">
+            	商品包装
+            </div>
+            <table border="0" class="car_tab" style="width:1110px;" cellspacing="0" cellpadding="0">
+              <tr>
+                <td class="car_th" width="80"></td>
+                <td class="car_th" width="490">名称</td>
+                <td class="car_th" width="180">费用</td>
+                <td class="car_th" width="180">免费额度</td>
+                <td class="car_th" width="180">图片</td>
+              </tr>
+              <tr>
+              	<td align="center"><input type="checkbox" name="pack" checked="checked" /></td>
+                <td><b style="font-size:14px;">不要包装</b></td>
+                <td align="center">￥15.00</td>
+                <td align="center">￥0.00</td>
+                <td align="center"></td>
+              </tr>
+              <tr>
+              	<td align="center"><input type="checkbox" name="pack" /></td>
+                <td><b style="font-size:14px;">精品包装</b></td>
+                <td align="center">￥15.00</td>
+                <td align="center">￥0.00</td>
+                <td align="center"><a href="#" style="color:#ff4e00;">查看</a></td>
+              </tr>
+            </table> 
+            
+            <div class="two_t">
+            	祝福贺卡
+            </div>
+            <table border="0" class="car_tab" style="width:1110px;" cellspacing="0" cellpadding="0">
+              <tr>
+                <td class="car_th" width="80"></td>
+                <td class="car_th" width="490">名称</td>
+                <td class="car_th" width="180">费用</td>
+                <td class="car_th" width="180">免费额度</td>
+                <td class="car_th" width="180">图片</td>
+              </tr>
+              <tr>
+              	<td align="center"><input type="checkbox" name="wish" checked="checked" /></td>
+                <td><b style="font-size:14px;">不要贺卡</b></td>
+                <td align="center">￥15.00</td>
+                <td align="center">￥0.00</td>
+                <td align="center"></td>
+              </tr>
+              <tr>
+              	<td align="center" style="border-bottom:0; padding-bottom:0;"><input type="checkbox" name="wish" /></td>
+                <td style="border-bottom:0; padding-bottom:0;"><b style="font-size:14px;">祝福贺卡</b></td>
+                <td align="center" style="border-bottom:0; padding-bottom:0;">￥15.00</td>
+                <td align="center" style="border-bottom:0; padding-bottom:0;">￥0.00</td>
+                <td align="center" style="border-bottom:0; padding-bottom:0;"><a href="#" style="color:#ff4e00;">查看</a></td>
+              </tr>
+              <tr valign="top">
+              	<td align="center"></td>
+                <td colspan="4">
+                	<span class="fl"><b style="font-size:14px;">祝福语：</b></span>
+                    <span class="fl"><textarea class="add_txt" style="width:860px; height:50px;"></textarea></span>
+                </td>
+              </tr>
+            </table> 
             
             <div class="two_t">
             	其他信息
             </div>
             <table border="0" class="car_tab" style="width:1110px;" cellspacing="0" cellpadding="0">
-<!--              <tr>
+              <tr>
                 <td width="145" align="right" style="padding-right:0;"><b style="font-size:14px;">使用红包：</b></td>
                 <td>
                 	<span class="fl" style="margin-left:50px; margin-right:10px;">选择已有红包</span>
@@ -138,9 +220,9 @@
                     <span class="fl"><input type="text" value="" class="c_ipt" style="width:220px;" />
                     <span class="fr" style="margin-left:10px;"><input type="submit" value="验证红包" class="btn_tj" /></span>
                 </td>
-			  </tr>-->
+			  </tr>
               <tr valign="top">
-                <td align="right" style="padding-right:0;"><b style="font-size:14px;">订单留言备注：</b></td>
+                <td align="right" style="padding-right:0;"><b style="font-size:14px;">订单附言：</b></td>
                 <td style="padding-left:0;"><textarea class="add_txt" style="width:860px; height:50px;"></textarea></td>
               </tr>
               <tr>
