--- a/application/index/view/public/header/shop_product_header2.html
+++ b/application/index/view/public/header/shop_product_header2.html
@@ -113,7 +113,7 @@
         </span>
         <!--End 所在收货地区 End-->
         <span class="fr">
-        	<span class="fl">你好，请<a href="/index/usera/user_index">登录</a>&nbsp; <a href="Regist.html" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
+        	<span class="fl">你好，请<a href="/index/usera/user_index">登录</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
         	<span class="ss">
             	<div class="ss_list">
                 	<a href="#">收藏夹</a>
@@ -447,17 +447,6 @@
             </div>
         </div>  
         <!--End 商品分类详情 End-->                                                     
-<<<<<<< HEAD:application/index/view/public/header/shop_product_header2.html
-    	<ul class="menu_r">
-        	<li><a href="Index.html">首页</a></li>
-            <li><a href="Food.html">美食</a></li>
-            <li><a href="Fresh.html">生鲜</a></li>
-            <li><a href="HomeDecoration.html">家居</a></li>
-            <li><a href="SuitDress.html">女装</a></li>
-            <li><a href="MakeUp.html">美妆</a></li>
-            <li><a href="Digital.html">数码</a></li>
-            <li><a href="GroupBuying.html">团购</a></li>
-=======
     	<ul class="menu_r">   
            <li style="width:70px "><a href="#">首页</a></li>
              
@@ -468,7 +457,6 @@
             <li style="width:1px">  {/foreach}
             </li>
              
->>>>>>> hanguiqin:application/index/view/public/header/shop_product_header2.html
         </ul>
         <div class="m_ad">中秋送好礼！</div>
     </div>
