--- a/application/index/view/usera/user_register.html
+++ b/application/index/view/usera/user_register.html
@@ -34,17 +34,22 @@
             function Regist(){
                 username=$('#username').val();
                 userpwd=$('#userpwd').val();
+                
                 useremail=$('#useremail').val();
                 userphone=$('#userphone').val();
                 userimg=$('#userimg').val();
                $.post("/index/usera/user_register",{"name":username,"pwd":userpwd,"email":useremail,"phone":userphone,"img":userimg},
                 function (data){
                     if(data==1){
+                       location.href="/index/index/index";
+                    }else {
                         mas="用户名已被注册";
                     }
+                    
                 }
         ) ;
              $('#mas').html(mas);
+             $('#acc').html(acc);
         }
         </script>
 <title>尤洪</title>
@@ -81,23 +86,23 @@
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;用户名 &nbsp;</td>
-                <td><input type="text" value="" class="l_user" name="username" id="username"/><span id="mas"></span></td>
+                <td><input type="text" value="" class="l_user" name="username" id="username" onblur='Regist()'/><span id="mas"></span></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;密码 &nbsp;</td>
-                <td><input type="password" value="" class="l_pwd" name="userpwd" id="userpwd"/></td>
+                <td><input type="password" value="" class="l_pwd" name="userpwd" id="userpwd" /></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;邮箱 &nbsp;</td>
-                <td><input type="text" value="" class="l_email" name="useremail" id="useremail"/></td>
+                <td><input type="text" value="格式：1850564889@qq.com" class="l_email" name="useremail" id="useremail" /></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;手机 &nbsp;</td>
-                <td><input type="text" value="" class="l_tel" name="userphone" id="userphone"/></td>
+                <td><input type="text" value="请输入数字" class="l_tel" name="userphone" id="userphone" /><span id="acc"></span></td>
               </tr>
                  <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;头像 &nbsp;</td>
-                <td><input type="text" value="" class="l_tel" name="userimg" id="userimg"/></td>
+                <td><input type="file" value=""name="userimg" id="userimg"/></td>
               </tr>
              
               <tr>
