--- a/application/index/view/goods_car/buycar.html
+++ b/application/index/view/goods_car/buycar.html
@@ -58,7 +58,7 @@ function clearnick(id){
             <td colspan="6" style="font-family:'Microsoft YaHei'; border-bottom:0;">
             	<label class="r_rad"><input type="checkbox" name="clear" checked="checked" /></label><label class="r_txt">清空购物车</label>
                 
-                <span class="fr">总价：<b style="font-size:22px; color:#ff4e00;">{$zj}</b></span>
+                <span class="fr">商品总价：<b style="font-size:22px; color:#ff4e00;">{$zj}</b></span>
                 
             </td>
           </tr>
