--- a/application/index/view/public/header/header1.html
+++ b/application/index/view/public/header/header1.html
@@ -113,7 +113,7 @@
         </span>
         <!--End 所在收货地区 End-->
         <span class="fr">
-        	<span class="fl">你好，请<a href="/index/usera/user_index">登录</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
+        	<span class="fl"><a href="/index/usera/user_index">{$bades}</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
         	<span class="ss">
             	<div class="ss_list">
                 	<a href="#">收藏夹</a>
