--- a/application/index/view/usera/user_stutes.html
+++ b/application/index/view/usera/user_stutes.html
@@ -29,26 +29,15 @@
     <script type="text/javascript" src="/front/js/tban.js"></script>
     
 	<script type="text/javascript" src="/front/js/lrscroll_1.js"></script>
-    <script>
-        function usertt(){
-        username=$('#username').val();
-        userpsw=$('#userpsw').val();   
-       
-        $.post("/index/usera/user_index",{"user_name":username,"user_pwd":userpsw},
-            function (data){ 
-                if(data==1){
-                    location.href="/index/index/index";
-                }else if(data==0){
-                    mas="用户名或密码错误";
-                }else if(data==2){
-                    mas="用户名不存在";
-                }
-            }
-        ) 
-        $('#mas').html(mas);
+        <script>
+            function stutespwd(){
+            username=$('#username').val();
+            $.post('/index/usera/user_stutes',{username:username},
+            function(data){
+                alert(data);
+            });
         }
-
-    </script>    
+        </script>
     
 <title>尤洪</title>
 </head>
@@ -57,7 +46,7 @@
 <div class="soubg">
 	<div class="sou">
         <span class="fr">
-        	<span class="fl"><a href="/index/usera/user_index">{$bades}</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp; </span>
+        	<span class="fl">你好，请<a href="Login.html">登录</a>&nbsp; <a href="Regist.html" style="color:#ff4e00;">免费注册</a>&nbsp; </span>
             <span class="fl">|&nbsp;关注我们：</span>
             <span class="s_sh"><a href="#" class="sh1">新浪</a><a href="#" class="sh2">微信</a></span>
             <span class="fr">|&nbsp;<a href="#">手机版&nbsp;<img src="/front/images/s_tel.png" align="absmiddle" /></a></span>
@@ -68,47 +57,34 @@
 <!--Begin Login Begin-->
 <div class="log_bg">	
     <div class="top">
-        <div class="logo"><a href="/index/index/index"><img src="/front/images/logo.png" /></a></div>
+        <div class="logo"><a href="Index.html"><img src="/front/images/logo.png" /></a></div>
     </div>
 	<div class="login">
     	<div class="log_img"><img src="/front/images/l_img.png" width="611" height="425" /></div>
 		<div class="log_c">
-                    <form action="#" method="post">
+                    <form method="post">
             <table border="0" style="width:370px; font-size:14px; margin-top:30px;" cellspacing="0" cellpadding="0">
               <tr height="50" valign="top">
               	<td width="55">&nbsp;</td>
                 <td>
-                	<span class="fl" style="font-size:24px;">登录</span>
-                    <span class="fr">还没有商城账号，<a href="/index/usera/toregister" style="color:#ff4e00;">立即注册</a></span>
+                	<span class="fl" style="font-size:24px;">修改密码</span>
+                    <span class="fr">还没有商城账号，<a href="Regist.html" style="color:#ff4e00;">立即注册</a></span>
                 </td>
               </tr>
-                
-        
-               
               <tr height="70">
                 <td>用户名</td>
-                <td><input type="text" value="" class="l_user" name="username" id="username"/> <span id="mas"></span></td>
+                <td><input type="text" value="" class="l_user" name="username" id="username" /></td>
               </tr>
               <tr height="70">
                 <td>密&nbsp; &nbsp; 码</td>
-                <td><input type="password" value="" class="l_pwd" name="userpsw" id="userpsw"/></td>
+                <td><input type="password" value="" class="l_pwd" name="userpwd" id="userpwd"/></td>
               </tr>
               <tr>
-                  
-                  
-                  
-                  
               	<td>&nbsp;</td>
-                <td style="font-size:12px; padding-top:20px;">
-                	<span style="font-family:'宋体';" class="fl">
-                    	<label class="r_rad"><input type="checkbox" /></label><label class="r_txt">请保存我这次的登录信息</label>
-                    </span>
-                    <span class="fr"><a href="/index/usera/touser_stutes" style="color:#ff4e00;">忘记密码</a></span>
-                </td>
               </tr>
               <tr height="60">
               	<td>&nbsp;</td>
-                <td><input type="button" value="登录" class="log_btn" onclick='usertt()'/></td>
+                <td><input type="submit" value="修改" class="log_btn" onclick="stuespwd()"/></td>
               </tr>
             </table>
             </form>
