--- a/application/back/view/Index/index.html
+++ b/application/back/view/Index/index.html
@@ -15,11 +15,8 @@
 					<div class="page-content">
 						<div class="page-header">
 							<h1>
-								首页
-								<small>
-									<i class="icon-double-angle-right"></i>
-									 查看
-								</small>
+								商城概览
+								
 							</h1>
 						</div><!-- /.page-header -->
 
@@ -53,9 +50,9 @@
 
 											<div class="infobox-data">
 												<span class="infobox-data-number">32</span>
-												<div class="infobox-content">2个评论</div>
+												<div class="infobox-content">留言数量</div>
 											</div>
-											<div class="stat stat-success">8%</div>
+											
 										</div>
 
 										<div class="infobox infobox-blue  ">
@@ -64,14 +61,11 @@
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-data-number">11</span>
-												<div class="infobox-content">新粉丝</div>
+												<span class="infobox-data-number">{$countuser}位</span>
+												<div class="infobox-content">商城用户</div>
 											</div>
 
-											<div class="badge badge-success">
-												+32%
-												<i class="icon-arrow-up"></i>
-											</div>
+											
 										</div>
 
 										<div class="infobox infobox-pink  ">
@@ -130,42 +124,12 @@
 											</div>
 										</div>
 
-										<div class="space-6"></div>
+									
+										
 
-										<div class="infobox infobox-green infobox-small infobox-dark">
-											<div class="infobox-progress">
-												<div class="easy-pie-chart percentage" data-percent="61" data-size="39">
-													<span class="percent">61</span>%
-												</div>
-											</div>
+										
 
-											<div class="infobox-data">
-												<div class="infobox-content">任务</div>
-												<div class="infobox-content">完成</div>
-											</div>
-										</div>
-
-										<div class="infobox infobox-blue infobox-small infobox-dark">
-											<div class="infobox-chart">
-												<span class="sparkline" data-values="3,4,2,3,4,4,2,2"></span>
-											</div>
-
-											<div class="infobox-data">
-												<div class="infobox-content">获得</div>
-												<div class="infobox-content">$32,000</div>
-											</div>
-										</div>
-
-										<div class="infobox infobox-grey infobox-small infobox-dark">
-											<div class="infobox-icon">
-												<i class="icon-download-alt"></i>
-											</div>
-
-											<div class="infobox-data">
-												<div class="infobox-content">下载次数</div>
-												<div class="infobox-content">1,205</div>
-											</div>
-										</div>
+									
 									</div>
 
 									
