--- a/application/back/view/Goodstype/Add_goods_type.html
+++ b/application/back/view/Goodstype/Add_goods_type.html
@@ -31,88 +31,13 @@
 
 								<form class="form-horizontal" role="form">
 									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 商品名称 </label>
+										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 分类名称 </label>
 
 										<div class="col-sm-9">
-											<input type="text" id="form-field-1" placeholder="例如：XX化妆品" class="col-xs-10 col-sm-5" />
+											<input type="text" id="form-field-1" placeholder="例如：化妆品" class="col-xs-10 col-sm-5" />
 										</div>
 									</div>
-									
-									<div class="space-4"></div>
-
-									
-
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-2"> 商品所属分类 </label>
-
-										<div class="col-sm-9">
-											
-											<select  id="form-field-2" class="col-xs-10 col-sm-5">
-												<option value="">--请选择--</option>
-													<option value="">化妆品</option>
-													<option value="">化妆品</option>
-											</select>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 商品价格 </label>
-
-										<div class="col-sm-9">
-											<input type="text" id="form-field-1" placeholder="例如：187.45" class="col-xs-10 col-sm-5" />
-										</div>
-									</div>
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 商品数量 </label>
-
-										<div class="col-sm-9">
-											<input type="text" id="form-field-1" placeholder="例如：67" class="col-xs-10 col-sm-5" />
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 商品规格 </label>
-
-										<div class="col-sm-9">
-											<input type="text" id="form-field-1" placeholder="例如：500ml" class="col-xs-10 col-sm-5" />
-										</div>
-									</div>
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-4">商品介绍</label>
-
-										<div class="col-sm-9">
-											
-											<textarea class="form-control" id="form-field-8" placeholder="例如：天然橄榄油" style="width: 350px;"></textarea>
-											<div class="space-2"></div>
-
-											<div class="help-block" id="input-size-slider"></div>
-										</div>
-									</div>
-
-									<div class="form-group">
-										<label class="col-sm-3 control-label no-padding-right" for="form-field-5">商品图片</label>
-
-										<div class="col-sm-9">
-											<div class="clearfix">
-												<input class="col-xs-1" type="file" id="form-field-5" placeholder="" />
-											</div>
-
-											<div class="space-2"></div>
-
-											<div class="help-block" id="input-span-slider"></div>
-										</div>
-									</div>
-									
-									
-
-								
-
-									<div class="space-4"></div>
-
-									
-									<div class="clearfix form-actions">
+                                         <div class="clearfix form-actions">
 										<div class="col-md-offset-3 col-md-9">
 											<button class="btn btn-info" type="button">
 												<i class="icon-ok bigger-110"></i>
@@ -126,29 +51,8 @@
 											</button>
 										</div>
 									</div>
-
-								
-									
-
-								
-
-									
-
-								
-								
-
-										
-									
-
-								
-									
-								</form>
-								
-
-
-
-								
-							</div><!-- /.col -->
+                              </form>
+                          </div><!-- /.col -->
 						</div><!-- /.row -->
 					</div><!-- /.page-content -->
 				</div><!-- /.main-content -->
