--- a/application/back/view/public/tree_layout_one_header.html
+++ b/application/back/view/public/tree_layout_one_header.html
@@ -382,7 +382,7 @@
 						<li>
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-desktop"></i>
-								<span class="menu-text"> UI 组件 </span>
+								<span class="menu-text"> 订单管理 </span>
 
 								<b class="arrow icon-angle-down"></b>
 							</a>
@@ -471,23 +471,23 @@
 						<li class="active open">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-list"></i>
-								<span class="menu-text"> 表格 </span>
+								<span class="menu-text"> 商品分类 </span>
 
 								<b class="arrow icon-angle-down"></b>
 							</a>
 
 							<ul class="submenu">
 								<li>
-									<a href="tables.html">
+									<a href="/back/Goodstype/add_goods_type">
 										<i class="icon-double-angle-right"></i>
-										简单 &amp; 动态
+										添加商品分类
 									</a>
 								</li>
 
 								<li>
-									<a href="jqgrid.html">
+									<a href="/back/Goodstype/del_goods_type">
 										<i class="icon-double-angle-right"></i>
-										jqGrid plugin
+										删除商品分类
 									</a>
 								</li>
 							</ul>
@@ -509,55 +509,58 @@
 									</a>
 								</li>
 
+							
+
 								<li>
-									<a href="form-wizard.html">
+									<a href="/back/Goods/goods_list">
 										<i class="icon-double-angle-right"></i>
-										向导提示 &amp; 验证
+										商品列表
 									</a>
 								</li>
 
+								
+							</ul>
+						</li>
+						
+
+
+
+
+						<li>
+							<a href="#" class="dropdown-toggle">
+								<i class="icon-list-alt"></i>
+								<span class="menu-text"> 留言管理 </span>
+
+								<b class="arrow icon-angle-down"></b>
+							</a>
+
+							<ul class="submenu">
 								<li>
-									<a href="wysiwyg.html">
+									<a href="/back/Goods/add_goods">
 										<i class="icon-double-angle-right"></i>
-										编辑器
+										添加商品
 									</a>
 								</li>
 
+							
+
 								<li>
-									<a href="dropzone.html">
+									<a href="/back/Goods/goods_list">
 										<i class="icon-double-angle-right"></i>
-										文件上传
+										商品列表
 									</a>
 								</li>
+
+								
 							</ul>
 						</li>
 
-						<li>
-							<a href="widgets.html">
-								<i class="icon-list-alt"></i>
-								<span class="menu-text"> 插件 </span>
-							</a>
-						</li>
 
-						<li>
-							<a href="calendar.html">
-								<i class="icon-calendar"></i>
 
-								<span class="menu-text">
-									日历
-									<span class="badge badge-transparent tooltip-error" title="2&nbsp;Important&nbsp;Events">
-										<i class="icon-warning-sign red bigger-130"></i>
-									</span>
-								</span>
-							</a>
-						</li>
 
-						<li>
-							<a href="gallery.html">
-								<i class="icon-picture"></i>
-								<span class="menu-text"> 相册 </span>
-							</a>
-						</li>
+						
+
+					
 
 						<li>
 							<a href="#" class="dropdown-toggle">
@@ -571,96 +574,13 @@
 								<li>
 									<a href="profile.html">
 										<i class="icon-double-angle-right"></i>
-										用户信息
+										管理员信息
 									</a>
 								</li>
-
-								<li>
-									<a href="inbox.html">
-										<i class="icon-double-angle-right"></i>
-										收件箱
-									</a>
-								</li>
-
-								<li>
-									<a href="pricing.html">
-										<i class="icon-double-angle-right"></i>
-										售价单
-									</a>
-								</li>
-
-								<li>
-									<a href="invoice.html">
-										<i class="icon-double-angle-right"></i>
-										购物车
-									</a>
-								</li>
-
-								<li>
-									<a href="timeline.html">
-										<i class="icon-double-angle-right"></i>
-										时间轴
-									</a>
-								</li>
-
-								<li>
-									<a href="login.html">
-										<i class="icon-double-angle-right"></i>
-										登录 &amp; 注册
-									</a>
-								</li>
-							</ul>
+                             </ul>
 						</li>
 
-						<li>
-							<a href="#" class="dropdown-toggle">
-								<i class="icon-file-alt"></i>
-
-								<span class="menu-text">
-									其他页面
-									<span class="badge badge-primary ">5</span>
-								</span>
-
-								<b class="arrow icon-angle-down"></b>
-							</a>
-
-							<ul class="submenu">
-								<li>
-									<a href="faq.html">
-										<i class="icon-double-angle-right"></i>
-										帮助
-									</a>
-								</li>
-
-								<li class="active">
-									<a href="error-404.html">
-										<i class="icon-double-angle-right"></i>
-										404错误页面
-									</a>
-								</li>
-
-								<li>
-									<a href="error-500.html">
-										<i class="icon-double-angle-right"></i>
-										500错误页面
-									</a>
-								</li>
-
-								<li>
-									<a href="grid.html">
-										<i class="icon-double-angle-right"></i>
-										网格
-									</a>
-								</li>
-
-								<li>
-									<a href="blank.html">
-										<i class="icon-double-angle-right"></i>
-										空白页面
-									</a>
-								</li>
-							</ul>
-						</li>
+						
 					</ul><!-- /.nav-list -->
 
 					<div class="sidebar-collapse" id="sidebar-collapse">
