--- a/application/back/view/Index/index.html
+++ b/application/back/view/Index/index.html
@@ -49,8 +49,8 @@
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-data-number">32</span>
-												<div class="infobox-content">留言数量</div>
+												<span class="infobox-data-number">{$arr['countcomment']}条</span>
+												<div class="infobox-content">评论数量</div>
 											</div>
 											
 										</div>
@@ -61,7 +61,7 @@
 											</div>
 
 											<div class="infobox-data">
-												<span class="infobox-data-number">{$countuser}位</span>
+												<span class="infobox-data-number">{$arr['countuser']}位</span>
 												<div class="infobox-content">商城用户</div>
 											</div>
 
